--- a/ansible/roles/insight-loadtables/tasks/main.yml
+++ b/ansible/roles/insight-loadtables/tasks/main.yml
@@ -5,8 +5,8 @@
 - name: Install Insight-loadTables to {{ insight_talend_location }}
   yum: name=palette-insight-loadtables state=latest update_cache=yes
 
-- name: Create directories for uploading and processing in /data/insight-server/uploads/{{ cluster_name }}
-  file: path=/data/insight-server/uploads/{{ cluster_name }}{{ item }} state=directory mode=0755 owner=insight group=insight
+- name: Create directories for uploading and processing in /data/insight-server/uploads/palette
+  file: path=/data/insight-server/uploads/palette{{ item }} state=directory mode=0755 owner=insight group=insight
   with_items:
     - ""
     - /processing
