--- a/ansible/roles/insight-loadtables/templates/insight-gpfdist.ini
+++ b/ansible/roles/insight-loadtables/templates/insight-gpfdist.ini
@@ -6,7 +6,7 @@ command={{ greenplum_install_path }}/bin/gpfdist -p {{ gpfdist_port }} -v -m 268
 ;;numprocs=1                    ; number of processes copies to start (def 1)
 
 ; directory to cwd to before exec (def no cwd)
-directory=/data/insight-server/uploads/{{ cluster_name }}/processing
+directory=/data/insight-server/uploads/palette/processing
 
 ;;umask=022                     ; umask for process (default None)
 ;;priority=999                  ; the relative start priority (default 999)
