Remove cluster_name occurrences from customers.ini and readme files

--- a/ansible/customers.ini
+++ b/ansible/customers.ini
@@ -1,19 +1,19 @@
 [dev]
-dev-insight splunk_host=PAL-DEV cluster_name=PAL-DEV tableau_version=9.3.2
-;testopi splunk_host=testopi cluster_name=testopi tableau_version=9.3.3
+dev-insight splunk_host=PAL-DEV tableau_version=9.3.2
+;testopi splunk_host=testopi tableau_version=9.3.3
 
 [early-adopter]
-usf-insight splunk_host=USF cluster_name=usf tableau_version=9.2.0 hostname_fqdn=usf-insight.palette-software.net
-pal-prod-insight splunk_host=PAL-PROD cluster_name=PAL-PROD tableau_version=9.3.2
-isi-qa-insight splunk_host=ISI-QA cluster_name=isi-qa tableau_version=9.3.0
-; tsla-stage-insight splunk_host=TSLA-STAGE cluster_name=TSLA-STAGE tableau_version=9.3.2
+usf-insight splunk_host=USF tableau_version=9.2.0 hostname_fqdn=usf-insight.palette-software.net
+pal-prod-insight splunk_host=PAL-PROD tableau_version=9.3.2
+isi-qa-insight splunk_host=ISI-QA tableau_version=9.3.0
+; tsla-stage-insight splunk_host=TSLA-STAGE tableau_version=9.3.2
 
 [stable]
-bsx-insight splunk_host=BSCI-PROD cluster_name=bsci tableau_version=9.2.4
-netflix-insight splunk_host=NETFLIX cluster_name=netflix-cluster01 tableau_version=9.2.4
-isi-insight splunk_host=ISI-PROD cluster_name=ISI-Prod tableau_version=9.1.1
-; pep-it-insight splunk_host=PEP-IT cluster_name=pep tableau_version=9.3.2
-; tsla-prod-insight splunk_host=TSLA-PROD cluster_name=TSLA-PROD tableau_version=9.3.2
+bsx-insight splunk_host=BSCI-PROD tableau_version=9.2.4
+netflix-insight splunk_host=NETFLIX tableau_version=9.2.4
+isi-insight splunk_host=ISI-PROD tableau_version=9.1.1
+; pep-it-insight splunk_host=PEP-IT tableau_version=9.3.2
+; tsla-prod-insight splunk_host=TSLA-PROD tableau_version=9.3.2
 
 [insight-server:children]
 dev
