Have the default password in the comments

--- a/kickstart/kickstart.cfg
+++ b/kickstart/kickstart.cfg
@@ -3,7 +3,7 @@
 install
 # Use CDROM installation media
 cdrom
-# Root password
+# Root password (palette)
 rootpw --iscrypted $6$qz/EchR2hVKscqjJ$0aeDoWmUPOlzNm9WpDa.BKhHn7uQuRrIc1k4O1dN1Pikh.z5GLVJDzFXF2eGTpgsYjumugyjO37N5J0sid28Y1
 # System keyboard
 keyboard us
