--- a/ansible/roles/ec2-provision/tasks/main.yml
+++ b/ansible/roles/ec2-provision/tasks/main.yml
@@ -1,17 +1,18 @@
 ---
   # returns create_vpc__vpc_id
   - include: create_vpc.yml
-   
+
   # returns create_security_group__group_id
   - include: create_security_group.yml
     vars:
       vpc_id: "{{ create_vpc__vpc_id }}"
 
   # returns create_instance__eip
-  - include: create_instance.yml 
+  - include: create_instance.yml
     vars:
       group_id: "{{ create_security_group__group_id }}"
       vpc_subnet_id: "{{ create_vpc_subnet__subnet_id }}"
+      delete_data_volume_on_termination: "{{ DELETE_DATA }}"
 
   - include: register_dns.yml
     vars:
