Change DELETE_DATA to DELETE_DATA_VOLUME

--- a/ansible/ec2-provision.yml
+++ b/ansible/ec2-provision.yml
@@ -14,7 +14,7 @@
     - name: "CUSTOMER_NAME"
       prompt: "Enter customer name/ticker"
       private: no
-    - name: "DELETE_DATA"
+    - name: "DELETE_DATA_VOLUME"
       prompt: "Delete the DATA volume on termination?"
       private: no
       default: false
