--- a/ansible/roles/ec2-provision/tasks/main.yml
+++ b/ansible/roles/ec2-provision/tasks/main.yml
@@ -12,7 +12,7 @@
     vars:
       group_id: "{{ create_security_group__group_id }}"
       vpc_subnet_id: "{{ create_vpc_subnet__subnet_id }}"
-      delete_data_volume_on_termination: "{{ DELETE_DATA }}"
+      delete_data_volume_on_termination: "{{ DELETE_DATA_VOLUME }}"
 
   - include: register_dns.yml
     vars:
